--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 }
 body {
     background-color: hsl(207, 25%, 44%);
+    overflow: hidden;
 }
 
 .header {
@@ -16,6 +17,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 .title {
@@ -80,4 +82,36 @@ footer {
     justify-content: center;
     align-items: center;
     color: white;
+}
+
+.play-again {
+    backdrop-filter: blur(5px);
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.play-again-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    width: 20vw;
+    background-color: hsla(0, 0%, 0%, 80%);
+    color: white;
+    border: 0;
+    border-radius: 5%;
+}
+
+.hidden {
+    display: none;
+}
+
+.show {
+    display: flex;
 }
